added link for pytorch for GPU functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-# basic libraries
 # python version 3.11.3
+# Important: Torch is included in Ultralytics, but GPU functionality wasn't possible for me with it. It works with a separate download beforehand.
+torch==2.5.1+cu118
+torchvision==0.20.1+cu118
+torchaudio==2.5.1+cu118
+--extra-index-url https://download.pytorch.org/whl/cu118
 
 ultralytics
 pandas
 geopandas
 rasterio
 matplotlib
+matplotlib-scalebar
 jupyter
 ipykernel
 tqdm
