--- a/runs/greenery_classification/args.yaml
+++ b/runs/greenery_classification/args.yaml
@@ -1,16 +1,16 @@
 task: classify
 mode: train
-model: weights\yolov8n-cls.pt
+model: weights\yolo11n-cls.pt
 data: ..\data\images_classified
 epochs: 50
 time: null
 patience: 20
-batch: 16
-imgsz: 128
+batch: 32
+imgsz: 224
 save: true
 save_period: -1
 cache: false
-device: cpu
+device: '0'
 workers: 8
 project: ..\runs
 name: greenery_classification
@@ -47,7 +47,7 @@ source: null
 vid_stride: 1
 stream_buffer: false
 visualize: false
-augment: false
+augment: true
 agnostic_nms: false
 classes: null
 retina_masks: false
